# ML

./: .gitignore  ArchiClassifierModel.py  README1.md  docker-compose.yml  flask_app.py  main.py  model.py  modelCat.py  pyproject.toml
catboost_info/: catboost_training.json  learn_error.tsv  test_error.tsv  time_left.tsv
catboost_info/learn/: events.out.tfevents
catboost_info/test/: events.out.tfevents
model/: catBoostModel.py
results/: predictions.csv
